Fix overflow in codemirror input

--- a/less/app.less
+++ b/less/app.less
@@ -247,14 +247,8 @@ pre, code { padding: 0; margin: 0; font-family:  Menlo !important; }
 
     .CodeMirror {
       width: 100%;
-      height: auto;
+      height: 420px;
       background: none;
-      overflow-y: auto;
-      max-height: 420px;
-
-      .CodeMirror-vscrollbar {
-        overflow: hidden;
-      }
     }
   }
 
@@ -277,23 +271,6 @@ pre, code { padding: 0; margin: 0; font-family:  Menlo !important; }
     &.invalid-token {
       background: @invalidColor;
     }
-  }
-}
-
-.saml-info {
-  .expired {
-    color: red;
-  }
-
-  .key {
-    font-weight: bold;
-    margin-right: 8px;
-    float: left;
-    clear: both;
-  }
-
-  .value {
-    float: left;
   }
 }
 
